Updates from Overleaf

--- a/0-datos_estudiante.tex
+++ b/0-datos_estudiante.tex
@@ -17,7 +17,7 @@
 % Datos del trabajo:
 % -------------------------------------------------------------------------------
 % Título completo
-\def \titulotesis {Simulaciones para la síntesis Lógica (HDL's) y para la extracción de componentes parásitos  }
+\def \titulotesis {Diseño de un circuito integrado con tecnología de 180nm usando la librería de diseño de TSMC. Verificación avanzada de la síntesis lógica y simulación avanzada del deck final que incluye resistencias y capacitancias parásitas  }
 % Año de entrega
 \def \anoentrega {2021}
 % Asesor
