--- a/g-objetivos.tex
+++ b/g-objetivos.tex
@@ -1,11 +1,23 @@
 \subsection*{Objetivo General}
 
-Poder realizar las comprobaciones necesarias de la síntesis lógica y la extracción de parásitos del modelado que se piensa implementar en el chip. Con el fin de que estas partes sean suficientemente buenas para poder seguir realizando los procesos debidos
+Realizar las comprobaciones necesarias de la síntesis lógica y la extracción de parásitos del modelado que se piensa implementar en el chip.
+Con el fin de poder comprobar la parte de la síntesis lógica, en donde se realizara simulaciones y verificaciones de rigor para el correcto funcionamiento del mismo  y poder comprobar que el circuito no se vea afectado por los parásitos.
+Poder tener una comunicación eficiente con los demás grupos de trabajo y poder lograr como grupo solventar los errores de forma rapida.
+
+
+
+
+
 
 \subsection*{Objetivos Específicos}
 \begin{itemize}
-\item Verificación de la síntesis lógica. 
-\item Simulaciones de la síntesis lógica.
-\item Verificación de la extracción de parásitos.
-\item Simulaciones de la extracción de parásitos.
+
+\item Tener una comunicaciones efectiva con los demás grupos de trabajo para la solución rapida de errores.
+\item Proporcionar el circuito, ya sintetizado para que no haya errores del diseño lógico y que pase al diseño físico.
+\item Poder realizar una verificación de los parásitos y poder emular el comportamiento de los parásitos dentro del circuito con gráficos. 
+\item Lograr ver el correcto funcionamiento del circuito para mandarlo a fabricar.
+\item Brindar los archivos necesarios para que puedan pasar a otras fases de diseño.
+\item Verificar que los análisis de la extracción de parásitos sea correcta con las herramientas de synopsys. 
+\item Lograr el entendimiento básico de las otras fases de diseño, para poder apoyar en las otras fases de diseño.
+
 \end{itemize}
