--- a/z-main.tex
+++ b/z-main.tex
@@ -145,31 +145,49 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
+\newpage
 \section*{Resumen}
+\addcontentsline{toc}{chapter}{Resumen}
 \defaultparformat{b-resumen}
 
+\newpage
 \section*{Antecedentes}
+\addcontentsline{toc}{chapter}{Antecedentes}
 \defaultparformat{e-antecedentes}
 
+\newpage
 \section*{Justificación}
+\addcontentsline{toc}{chapter}{Justificación}
 \defaultparformat{f-justificacion}
 
+\newpage
 \section*{Objetivos}
+\addcontentsline{toc}{chapter}{Objetivos}
 \defaultparformat{g-objetivos}
 
+\newpage
 \section*{Marco teórico}
+\addcontentsline{toc}{chapter}{Marco Teórico}
 \defaultparformat{i-marco_teorico}
 
+\newpage
 \section*{Metodología}
+\addcontentsline{toc}{chapter}{Metodología}
 \defaultparformat{p-metodologia}
 
+\newpage
 \section*{Cronograma de actividades}
+\addcontentsline{toc}{chapter}{Cronograma de Actividades}
 \defaultparformat{q-cronograma}
 
+\newpage
 \section*{Índice preliminar}
+\addcontentsline{toc}{chapter}{Índice preliminar}
 \defaultparformat{r-indice_preliminar}
 
+\newpage
 \section*{Referencias}
+\addcontentsline{toc}{chapter}{Referencias}
 \printbibliography[heading=none]
 
 
