--- a/i-marco_teorico.tex
+++ b/i-marco_teorico.tex
@@ -9,7 +9,7 @@ El VLSI se conoce como \textit{Very Large Scale Integration}, en donde el numero
 
 El ingeniero Gordon Moore, logro observar en 1965 que la cantidad de transistores iba aumentando según los años que pasaban por un factor de 2, es decir que por cada año la cantidad de transistores en un microprocesador aumentaba cada año. En el 2007, el mismo Moore produjo que su ley dejara de existir dentro de 10 o 15 años, dependiendo de lo que se realice en estos años.
 \cite{hoover2010bio} \cite{park2014design}
-\vspace{15mm}
+
 
 \subsection*{Flujo de diseño}
 
@@ -27,18 +27,19 @@ El flujo de diseño nos muestra los pasos requeridos para poder realizar una ser
  \underline{Tercero}: El netlist, este es un circuito generado, después de la síntesis lógica en donde se logra observar  por medio de librerías.
  
  \underline{Cuarto}: El Ultimo paso, se utilizan varios software's con el fin de verificar la funcionalidad de la síntesis del circuito.
- \vspace{80mm}
+
  \cite{charls} 
 
- \begin{figure}[t]
+
+ \begin{figure}[h]
     \centering
-    \includegraphics[width=0.57\textwidth]{figuras/Font.JPG}
+    \includegraphics[width=0.58\textwidth]{figuras/Font.JPG}
     \caption{Diagrama del Front-End}
     \label{fig:mesh1}
 \end{figure}
  
  
- 
+
  
  
   \textbf{Back End} 
@@ -57,12 +58,13 @@ Esta parte va mas inclinada a la implementación del circuito en físico. Esta t
 \underline{Sexto}: La extracción de parásitos, aquí es donde se simula la parte del layout con la cantidad de parásitos que pueda tener el layout, y se logra ver que tanto llega a afectar al final del proceso.
 
  \cite{charls} 
-\begin{figure}[t]
+\begin{figure}[h]
     \centering
     \includegraphics[width=0.57\textwidth]{figuras/Back.JPG}
     \caption{Diagrama del Back-End}
     \label{fig:mesh1}
 \end{figure}
+\newpage
 
 \subsection*{Lenguaje Descriptor de Hardware}
 
