--- a/b-resumen.tex
+++ b/b-resumen.tex
@@ -1,3 +1,7 @@
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae eleifend ipsum, ut mattis nunc. Pellentesque ac hendrerit lacus. Cras sollicitudin eget sem nec luctus. Vivamus aliquet lorem id elit venenatis pellentesque. Nam id orci iaculis, rutrum ipsum vel, porttitor magna. Etiam molestie vel elit sed suscipit. Proin dui risus, scelerisque porttitor cursus ac, tempor eget turpis. Aliquam ultricies congue ligula ac ornare. Duis id purus eu ex pharetra feugiat. Vivamus ac orci arcu. Nulla id diam quis erat rhoncus hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed vulputate, metus vel efficitur fringilla, orci ex ultricies augue, sit amet rhoncus ex purus ut massa. Nam pharetra ipsum consequat est blandit, sed commodo nunc scelerisque. Maecenas ut suscipit libero. Sed vel euismod tellus.
 
-Proin elit tellus, finibus et metus et, vestibulum ullamcorper est. Nulla viverra nisl id libero sodales, a porttitor est congue. Maecenas semper, felis ut rhoncus cursus, leo magna convallis ligula, at vehicula neque quam at ipsum. Integer commodo mattis eros sit amet tristique. Cras eu maximus arcu. Morbi condimentum dignissim enim non hendrerit. Sed molestie erat sit amet porttitor sagittis. Maecenas porttitor tincidunt erat, ac lacinia lacus sodales faucibus. Integer nec laoreet massa. Proin a arcu lorem. Donec at tincidunt arcu, et sodales neque. Morbi rhoncus, ligula porta lobortis faucibus, magna diam aliquet felis, nec ultrices metus turpis et libero. Integer efficitur erat dolor, quis iaculis metus dignissim eu.
+
+Este proyecto consta en la simulación y verificación de los archivos obtenido del diseño lógico y la extracción de parásitos de los componentes del circuito realizado. 
+En la parte del diseño lógico se enfoca mas en lo que es la depuración y optimización en el flujo de diseño con tecnología de 180nm, en donde esto consta de un flujo de diseño para poder fabricar el chip. Esta parte se va a enfocar en optimizar para la prueba y simulación de archivos HDL y esquemáticos que se pueden llegar a generar las herramientas de synopsys, en esta parte del diseño lógico se utilizara tanto como VCS y Verdi.
+En esta parte se realizaran distintas pruebas, para que en la parte final, ya se pueda validar cada uno de los flujos de diseño.
+
+En la parte de parásitos se va a encargar de la simulación en HSpice, que nos permite realizar una extracción exitosa para realizar el chip y lograr ver si cumple con las especificaciones. Se pretende mostrar lo que realmente hace el software, las librerías y los comandos que se vana realizar en este proyecto, para que las personas en un futuro puedan agarrar el flujo y realizar sus propios proyectos.
