Updates from Overleaf

--- a/b-resumen.tex
+++ b/b-resumen.tex
@@ -1,7 +1,9 @@
 
 
 Este proyecto consta en la simulación y verificación de los archivos obtenido del diseño lógico y la extracción de parásitos de los componentes del circuito realizado. 
-En la parte del diseño lógico se enfoca mas en lo que es la depuración y optimización en el flujo de diseño con tecnología de 180nm, en donde esto consta de un flujo de diseño para poder fabricar el chip. Esta parte se va a enfocar en optimizar para la prueba y simulación de archivos HDL y esquemáticos que se pueden llegar a generar las herramientas de synopsys, en esta parte del diseño lógico se utilizara tanto como VCS y Verdi.
-En esta parte se realizaran distintas pruebas, para que en la parte final, ya se pueda validar cada uno de los flujos de diseño.
+En la parte del diseño lógico se enfoca mas en lo que es la depuración y optimización en el flujo de diseño con tecnología de 180nm, en donde esto consta de un flujo de diseño para poder fabricar el chip. Esta parte se va a enfocar en optimizar para la prueba y simulación de archivos HDL y esquemáticos que se pueden llegar a generar las herramientas de Synopsys, en esta parte del diseño lógico se utilizara tanto como VCS y Verdi.
+En esta parte se realizará distintas pruebas, para que en la parte final, ya se pueda validar cada uno de los flujos de diseño.
 
-En la parte de parásitos se va a encargar de la simulación en HSpice, que nos permite realizar una extracción exitosa para realizar el chip y lograr ver si cumple con las especificaciones. Se pretende mostrar lo que realmente hace el software, las librerías y los comandos que se vana realizar en este proyecto, para que las personas en un futuro puedan agarrar el flujo y realizar sus propios proyectos.
+En la parte de parásitos se va a encargar de la simulación en HSpice, que nos permite realizar una extracción exitosa para realizar el chip y lograr ver si cumple con las especificaciones. Se pretende mostrar lo que realmente hace el software, las librerías y los comandos que se va a realizar en este proyecto, para que las personas en un futuro puedan agarrar el flujo y realizar sus propios proyectos.
+
+En sí, lo que consta el trabajo es realizar las simulaciones de la primera etapa de diseño y la última de la extracción de parásitos, para poder corroborar que el chip que se mande a fabricar sea un chip, que no tenga problemas al probarlo de forma física.
