--- a/g-objetivos.tex
+++ b/g-objetivos.tex
@@ -1,8 +1,9 @@
 \subsection*{Objetivo General}
 
 Realizar las comprobaciones necesarias de la síntesis lógica y la extracción de parásitos del modelado que se piensa implementar en el chip.
-Con el fin de poder comprobar la parte de la síntesis lógica, en donde se realizara simulaciones y verificaciones de rigor para el correcto funcionamiento del mismo  y poder comprobar que el circuito no se vea afectado por los parásitos.
-Poder tener una comunicación eficiente con los demás grupos de trabajo y poder lograr como grupo solventar los errores de forma rapida.
+Con el fin de poder comprobar la parte de la síntesis lógica, en donde se realizará simulaciones y verificaciones de rigor para el correcto funcionamiento del circuito propuesto y poder obtener la caracterización del diseño en silicio del proyecto completo.
+
+
 
 
 
@@ -12,12 +13,21 @@ Poder tener una comunicación eficiente con los demás grupos de trabajo y poder
 \subsection*{Objetivos Específicos}
 \begin{itemize}
 
-\item Tener una comunicaciones efectiva con los demás grupos de trabajo para la solución rapida de errores.
-\item Proporcionar el circuito, ya sintetizado para que no haya errores del diseño lógico y que pase al diseño físico.
-\item Poder realizar una verificación de los parásitos y poder emular el comportamiento de los parásitos dentro del circuito con gráficos. 
-\item Lograr ver el correcto funcionamiento del circuito para mandarlo a fabricar.
-\item Brindar los archivos necesarios para que puedan pasar a otras fases de diseño.
-\item Verificar que los análisis de la extracción de parásitos sea correcta con las herramientas de synopsys. 
-\item Lograr el entendimiento básico de las otras fases de diseño, para poder apoyar en las otras fases de diseño.
+\item Tener una comunicación efectiva con los demás grupos de trabajo para la solución rápida de errores.
+
+\item Establecer una forma de validar los archivos generados en la síntesis lógica y con la extracción de parásitos. 
+
+\item Realizar una verificación de los parásitos.
+
+\item Simular el circuito tomando en cuenta los parásitos, para que cumpla con los requisitos de fabricación. 
+
+\item Corroborar el correcto funcionamiento del circuito.
+
+\item Verificar que los análisis de la extracción de parásitos sean correctos con las herramientas de Synopsys. 
+
+\item Lograr el entendimiento básico de las otras fases de diseño, para poder ejecutar de la forma más eficiente las verificaciones, simulaciones y análisis que aplican las fases de diseño de este trabajo.
+
+\item Brindar archivos y la información necesaria, con el fin de automatizar el proceso para las partes posteriores de la verificación de la síntesis lógica.
+
 
 \end{itemize}
