--- a/p-metodologia.tex
+++ b/p-metodologia.tex
@@ -3,10 +3,11 @@
 Para la metodología de la parte del diseño lógico, este consta del diseño de varios flujos utilizando la herramienta de VCS con el fin de testear y luego ser validados por el mismo programa.
 
 \subsection*{Análisis}
-VCS es una herramienta que proporciona un parte importante en el flujo de diseño del proyecto, en donde para poder realizar una simulación exitosa se consulto con la documentación de la herramienta proporcionada por synopsys.
-La documentación de este viene en un parte de synopsys llamada SolvNet, la cual presenta una documentación extensa, en donde se puede aprender sobre la herramienta y detallada, en la cual Cual también aparecen los programas como: Verdi, StarRc y HSpice, estas serán necesarias al realizar las simulaciones y las verificaciones necesarias, en donde SolvNet, sera de gran ayuda para poder realizar las simulaciones y verificaciones necesarias.
-Estas herramientas se van actualizando cada año, en donde las mismas presentan mejoras a su sistema para poder evaluar con mayor detenimiento las simulaciones, en donde cada vez van a ver mas aspectos a tomar en cuenta.
+VCS es una herramienta que proporciona un parte importante en el flujo de diseño del proyecto, en donde para poder realizar una simulación exitosa se consultó con la documentación de la herramienta proporcionada por Synopsys.
+La documentación de este viene en un parte de synopsys llamada SolvNet, la cual presenta una documentación extensa, en donde se puede aprender sobre la herramienta y detallada, en la cual también aparecen los programas como: Verdi, StarRc y HSpice, estas serán necesarias al realizar las simulaciones y las verificaciones necesarias, en donde SolvNet, será de gran ayuda para poder realizar las simulaciones y verificaciones necesarias.
+Estas herramientas se van actualizando cada año, en donde las mismas presentan mejoras a su sistema para poder evaluar con mayor detenimiento las simulaciones, en donde cada vez van a ver más aspectos a tomar en cuenta.
+
 
 \subsection*{Pruebas}
-Las pruebas van a ser realizadas por medio de los programas anteriormente mencionados, en donde cada uno de estos va a jugar un papel importante y con los resultados de las pruebas, se documentara para poder visualizar los cambios antes de la simulación con los resultados obtenidos después, para lograr ver una mejora y poder interpretar los datos de una mejor manera, en donde no solo actualizaremos los conocimientos de las herramientas, sino que también para entender mejor el funcionamiento de las mismas. 
-Se buscara visualizar como funcionaria el circuito, ya con la implementación del chip en físico, para no enviar a fabricar un chip que realmente no funcione.
+Las pruebas van a ser realizadas por medio de los programas anteriormente mencionados, en donde cada uno de estos va a jugar un papel importante y con los resultados de las pruebas, se documentara las pruebas y los cambios que se realizaron en el transcurso del proyecto con el fin de  visualizar los cambios antes de la simulación con los resultados obtenidos después, para lograr ver una mejora y poder interpretar los datos de una mejor manera, en donde no solo actualizaremos los conocimientos de las herramientas, sino que también para entender mejor el funcionamiento de las mismas. 
+Se buscará visualizar el correcto funcionamiento del circuito, ya con la implementación del chip en físico, para no enviar a fabricar un chip que realmente no funcione.
