--- a/e-antecedentes.tex
+++ b/e-antecedentes.tex
@@ -1,18 +1,12 @@
 
-
 Este proyecto se puedo realizar gracias al Ingeniero Carlos Esquit, que fue asignado en el 2009 como el director de carrera del departamento de Ingeniería de Electrónica y Mecatrónica. Esta persona fue que comenzó con esta iniciativa por el 2013.
+Todo comenzó en el 2013 cuando comenzaron a dar el curso de VLSI en la Universidad del Valle de Guatemala, en el que paso a ser nanoelectrónica 1, en donde se aprendieron todos los conceptos necesarios para realizar esta parte del proyecto. 
+En el 2020 y el 2021 no se tuvo que parar en el proceso de la investigación sobre cómo realizar el flujo de diseño para realizar un chip a nano escala. Con Splashtop se pudo ingresar a las computadoras de la Universidad, en las cuales se podría acceder al equipo que puede ser utilizado para el flujo de diseño y gracias a Synopsys se pudieron instalar los softwares necesarios para la realización del flujo de diseño.
+Este flujo de diseño ha ido evolucionando conforme a los cursos de nanoelectrónica 1 y 2, que dieron lugar en la reforma curricular realizada en el 2015, en la Universidad del Valle por Carlos Esquit. Con esto se pudo ir evaluando conceptos claves que nos servirían en un futuro, para la realización del flujo de diseño.
+En el 2019 un grupo de estudiantes de la Universidad logro comenzar a realizar un proyecto de un chip a escala nanométrica, desde que se comenzó con esta iniciativa otro grupo de estudiantes en el 2020 comenzaron a realizar retoques en este proceso de poder realizar un chip a nano escala.
+Los estudiantes que comenzaron con esta iniciativa fueron Luis Nájera y Steven Rubio, estos individuos comenzaron a realizar una estructura de lo que es el diseño de flujo, el cual es un proceso que se divide en 2 categorías: En diseño lógico y el diseño físico. Mas que todo dejaron un esquema planteado para lograr elaborar ambas partes del diseño, dejando las herramientas necesarias para la producción de este que se tienen que tomar de Synopsys, generaron guías de instalación y un uso poco ambiguo del uso de las herramientas de Synopsys.
+Para el trabajo que se realizó en el 2020 fue un proceso de varios alumnos que realizaron varias etapas de diseño con el fin de dejar una plantilla casi terminada, para poder correr cualquier programa y que pasara el flujo de diseño sin ningún inconveniente, lastimosamente  por la pandemia  se pudo realizar  un circuito pequeño, pero sin comprobar cosas del diseño físico y sin el conocimiento completo de cada para del flujo del diseño, pero con una gran parte de la finalización del proyecto teniendo cada parte definida y que herramientas de software son las necesarias para realizar cualquier proceso del flujo de diseño.
 
-Todo comenzó en el 2013 cuando comenzaron a dar el curso de VLSI en la Universidad del Valle de Guatemala, en el que paso a ser Nanoelectronica 1, en donde se aprendieron todos los conceptos necesarios para realizar esta parte del proyecto. 
-
-
-En el 2020 y el 2021 no se tuvo que parar en el proceso de la investigación sobre como realizar el flujo de diseño para realizar un chip a nanoescala. Con Splashtop se pudo ingresar a las computadoras de la Universidad, en las cuales se podría acceder al equipo que puede ser utilizado para el flujo de diseño y gracias a synopsys se pudieron instalar los software necesarios para la realización del flujo de diseño.
-
-Este flujo de diseño ha ido evolucionando conforme a los cursos de Nanoelectronica 1 y 2, que dieron lugar en la reforma curricular realizada en el 2015, en la Universidad del Valle por Carlos Esquit. Con esto se pudo ir evaluando conceptos claves que nos servirían en un futuro, para la realización del flujo de diseño.
-
-
-En el 2019 un grupo de estudiantes de la Universidad logro comenzar a realizar un proyecto de un chip a escala nanométrica, desde que se comenzó con esta iniciativa otro grupo de estudiantes en el 2020 comenzaron a realizar retoques en este proceso de poder realizar un chip a nanoescala.
-Los estudiantes que comenzaron con esta iniciativa fueron Luis Najera y Steven Rubio, estos individuos comenzaron a realizar un estructura de lo que es el diseño de flujo, el cual es un proceso que se divide en 2 categorías: En diseño lógico y el diseño físico. Mas que todo dejaron un esquema planteado para lograr elaborar ambas partes del diseño, dejando las herramientas necesarias para la producción del mismo que se tienen que tomar de synopsys, generaron guías de instalación y un uso poco ambiguo del uso de las herramientas de synopsys.
-Para el trabajo que se realizo en el 2020 fue un proceso de varios alumnos que realizaron varias etapas de diseño con el fin de dejar una plantilla casi terminada, para poder correr cualquier programa y que pasara el flujo de diseño sin ningún inconveniente, lastimosamente la pandemia que realizo el COVID-19, se pudo realizar solamente un circuito pequeño, pero sin comprobar cosas del diseño físico y sin el conocimiento completo de cada para del flujo del diseño, pero con una gran parte de la finalización del proyecto teniendo cada parte definida y que herramientas de software son las necesarias para realizar cualquier proceso del flujo de diseño.
 
 
 
