--- a/f-justificacion.tex
+++ b/f-justificacion.tex
@@ -1,10 +1,11 @@
 
-La fabricación de un chip a nanoescala representa grandes avances para la Universidad de Guatemala y para el mismo país, ya que esta sera la primera vez que una Universidad de Guatemala pueda ser capaz del diseño de un chip con una tecnología de 180nm. Con el flujo de diseño se pretende diseñar y lograr mandar a fabricar chips que sean diseñados por medio de un programa de descriptor de hardware y que pueda ser utilizado para un proyecto de mayor escala que revolucione la universidad y que sea un incentivo para el desarrollo en Guatemala sobre la investigación en nanoelectrónica.
 
-Este trabajo, es un parte muy importante en el flujo de diseño. Este trabajo es importante para la continuación de las partes posteriores, ya que se sintetizara por medio de las herramientas de synopsys y con la simulación y la comparación de los diseños digitales que serán el original y el sintetizado jugaran un importante papel en las otras fases de diseño, por la complejidad que pueda representar el circuito en las otras fases. A la hora de sintetizar un circuito se espera que se logre comportar de la manera deseada y este puede ayudar a la parte anterior para ver si se encuentra un error en la parte del diseño del mismo circuito.
+La fabricación de un chip a nano escala representa grandes avances para la Universidad de Guatemala y para el mismo país, ya que esta será la primera vez que una Universidad de Guatemala pueda ser capaz del diseño de un chip con una tecnología de 180nm. Con el flujo de diseño se pretende diseñar y lograr mandar a fabricar chips que sean diseñados por medio de un programa de descriptor de hardware y que pueda ser utilizado para un proyecto de mayor escala que revolucione la universidad y que sea un incentivo para el desarrollo en Guatemala sobre la investigación en nanoelectrónica.
 
-En la otra fase de diseño enfocada en la parte de simulación de la extracción de parásitos, es una parte que depende de todas las fases anteriores, ya que este mirara las simulaciones, en donde mostrara las respuestas mas reales posibles por las herramientas de synopsys del circuito que se pretende realizar, por lo tanto esta etapa sera la que indicara el correcto funcionamiento del chip antes de ser enviado a fabricar.
-En si, lo que consta el trabajo es realizar las simulaciones de la primera etapa de diseño y la ultima de la extracción de parásitos, para poder corroborar que el chip que se mande a fabricar sea un chip, que no tenga problemas al probarlo de forma física.
+Este trabajo, es un parte muy importante en el flujo de diseño, este se necesita para las partes posteriores, ya que se sintetizará por medio de las herramientas de Synopsys y con la simulación y la comparación de los diseños digitales que serán el original y el sintetizado jugarán un importante papel en las otras fases de diseño, por la complejidad que pueda representar el circuito en las otras fases. A la hora de sintetizar un circuito se espera que se logre comportar de la manera deseada y este puede ayudar a la parte anterior para ver si se encuentra un error en la parte del diseño del mismo circuito.
+
+En la otra fase de diseño enfocada en la parte de simulación de la extracción de parásitos, es una parte que depende de todas las fases anteriores, ya que esta enseñará las simulaciones, en donde podremos ver las respuestas más reales posibles por las herramientas de Synopsys del circuito que se pretende realizar, por lo tanto, esta etapa será la que indica el correcto funcionamiento del chip antes de ser enviado a fabricar.
+
 
 
 
