Updates from Overleaf

--- a/i-marco_teorico.tex
+++ b/i-marco_teorico.tex
@@ -189,3 +189,15 @@ Además, se pueden realizar análisis de los circuitos eléctricos en estado est
  \cite{charls} 
 
 
+
+\subsection*{Trabajo realizado}
+
+En los años anteriores se realizaron trabajos de investigación para poder utilizar y lograr entender los softwares como Verdi, Formality, VCS y HSPICE.
+
+Se realizaron diferentes tipos de flujos según la complejidad requerida, en donde se lograron diseñar distintos flujos en la herramienta VCS, con el objetivo de verificar el comportamiento del circuito sintetizado. En este se realizan 2 simulaciones una para el circuito original y uno para el circuito sintetizado que ya hace referencia a las librerías de TSMC de 180 nm. Entonces el trabajo realizado por Jefferson Ruano, ya nos dice las librerías utilizadas para la simulación. En el trabajo del año 2020, también se logra ver el flujo de simulación con detección de condiciones de carrera, las cuales puede mostrar inconsistencias en las simulaciones ejecutadas. También logra mostrar el flujo para la evaluación de desempeño, en donde VCS cuenta con una herramienta conocida como generación de perfiles de simulación unificado, esta herramienta nos permite ver la cantidad de tiempo de CPU y memoria usada por nuestro diseño. 
+El trabajo realizado con Formality, se logró aprender que es una alternativa a la validación en las herramientas de VCS y Verdi. Este llega a generar un reporte más practico, ya que logra generar un reporte más simple con las coincidencias e inconsistencias al ver los circuitos.
+
+En el trabajo realizado por Charlie Ayenci, en donde logro simular el diseño con parásitos por medio HSPICE, hubo ciertos errores al correr la simulación en donde, la empresa TSMC solamente logra proveer un kit académico, por lo que solo se encontraran las black boxes, que solo contienen el diseño de silicio del componente y con esto el netlist no logra poseer los puertos de entrada, salida y alimentación.  
+
+ \cite{charls} 
+  \cite{Jeff} 
